--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <button id="btn">click me !</button>
+    <h2>hello guys</h2>
 
     <script>
       const btn = document.getElementById("btn");
